--- a/src/Pages/Cart.css
+++ b/src/Pages/Cart.css
@@ -6,7 +6,7 @@
   --text-color: #2c3e50;
   --border-radius: 12px;
   --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -180,7 +180,7 @@ body {
     margin-bottom: 20px;
     padding: 15px 15px 25px;
     border-radius: var(--border-radius);
-    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
   }
 
   .cart-table tbody tr:hover {
@@ -318,5 +318,62 @@ body {
   to {
     opacity: 1;
     transform: scale(1);
+  }
+}
+
+.loader-overlay {
+  display: flex;
+  flex-direction: column; /* keep loader and text stacked vertically */
+  justify-content: center; /* vertical centering */
+  align-items: center; /* horizontal centering */
+  height: 150px; /* or enough height for the loader + text */
+  padding: 0 20px;
+}
+
+
+.loader {
+  width: 90px;
+  height: 14px;
+  box-shadow: 0 3px 0 #020202;
+  position: relative;
+  clip-path: inset(-40px 0 -5px);
+}
+.loader:before {
+  content: "";
+  position: absolute;
+  inset: auto calc(50% - 17px) 0;
+  height: 50px;
+  --g: no-repeat linear-gradient(#0d0d0d 0 0);
+  background: var(--g), var(--g), var(--g), var(--g);
+  background-size: 16px 14px;
+  animation: l7-1 2s infinite linear, l7-2 2s infinite linear;
+}
+@keyframes l7-1 {
+  0%,
+  100% {
+    background-position: 0 -50px, 100% -50px;
+  }
+  17.5% {
+    background-position: 0 100%, 100% -50px, 0 -50px, 100% -50px;
+  }
+  35% {
+    background-position: 0 100%, 100% 100%, 0 -50px, 100% -50px;
+  }
+  52.5% {
+    background-position: 0 100%, 100% 100%, 0 calc(100% - 16px), 100% -50px;
+  }
+  70%,
+  98% {
+    background-position: 0 100%, 100% 100%, 0 calc(100% - 16px),
+      100% calc(100% - 16px);
+  }
+}
+@keyframes l7-2 {
+  0%,
+  70% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translate(200%);
   }
 }
